Fix: Font in home page

--- a/home/assets/css/style.css
+++ b/home/assets/css/style.css
@@ -249,7 +249,7 @@ body {
   background-color: var(--international-orange-engineering);
   color: var(--white);
   max-width: max-content;
-  font-family: "Poppins";
+  font-family: var(--ff-Poppins);
   font-weight: var(--fw-600);
   text-transform: uppercase;
   display: flex;
