--- a/booking/assets/css/style.css
+++ b/booking/assets/css/style.css
@@ -876,7 +876,7 @@ input[type="date"] {
   }
 
   .header .container {
-    gap: 30px;
+    /* gap: 3px; */
   }
 
   .navbar,
@@ -893,6 +893,7 @@ input[type="date"] {
   .navbar-link {
     position: relative;
     font-size: unset;
+    font-size: 1.29rem;
   }
 
   .navbar-link:is(:hover, :focus-visible) {
@@ -915,8 +916,8 @@ input[type="date"] {
 
   .header .btn {
     display: flex;
-    padding: 12px 24px;
-    font-size: var(--fs-5);
+    padding: 10px 20px;
+    font-size: 1.2rem;
   }
 }
 
@@ -963,6 +964,10 @@ input[type="date"] {
     padding-block: 25px;
   }
 
+  .header .container {
+    gap: 9px;
+  }
+
   .logo img {
     width: 128px;
   }
@@ -970,6 +975,14 @@ input[type="date"] {
   .header .btn {
     font-size: unset;
     padding-block: 15px;
+  }
+
+  .navbar-link {
+    font-size: 1.55rem;
+  }
+
+  .header .btn {
+    font-size: 1.55rem;
   }
 
   /**
