--- a/home/assets/css/style.css
+++ b/home/assets/css/style.css
@@ -755,7 +755,7 @@ body {
   }
 
   .header .container {
-    gap: 30px;
+    /* gap: 3px; */
   }
 
   .navbar,
@@ -772,6 +772,7 @@ body {
   .navbar-link {
     position: relative;
     font-size: unset;
+    font-size: 1.28rem;
   }
 
   .navbar-link:is(:hover, :focus-visible) {
@@ -794,8 +795,8 @@ body {
 
   .header .btn {
     display: flex;
-    padding: 12px 24px;
-    font-size: var(--fs-5);
+    padding: 10px 20px;
+    font-size: 1.2rem;
   }
 
   /**
@@ -872,9 +873,21 @@ body {
     width: 128px;
   }
 
+  .header .container {
+    gap: 9px;
+  }
+
   .header .btn {
     font-size: unset;
     padding-block: 15px;
+  }
+
+  .navbar-link {
+    font-size: 1.55rem;
+  }
+
+  .header .btn {
+    font-size: 1.55rem;
   }
 
   /**
