--- a/katalog/assets/css/style.css
+++ b/katalog/assets/css/style.css
@@ -867,7 +867,7 @@ section {
   }
 
   .header .container {
-    gap: 30px;
+    /* gap: 3px; */
   }
 
   .navbar,
@@ -884,6 +884,7 @@ section {
   .navbar-link {
     position: relative;
     font-size: unset;
+    font-size: 1.29rem;
   }
 
   .navbar-link:is(:hover, :focus-visible) {
@@ -906,8 +907,8 @@ section {
 
   .header .btn {
     display: flex;
-    padding: 12px 24px;
-    font-size: var(--fs-5);
+    padding: 10px 20px;
+    font-size: 1.2rem;
   }
 }
 
@@ -954,6 +955,10 @@ section {
     padding-block: 25px;
   }
 
+  .header .container {
+    gap: 9px;
+  }
+
   .logo img {
     width: 128px;
   }
@@ -961,6 +966,14 @@ section {
   .header .btn {
     font-size: unset;
     padding-block: 15px;
+  }
+
+  .navbar-link {
+    font-size: 1.55rem;
+  }
+
+  .header .btn {
+    font-size: 1.55rem;
   }
 
   /**
