--- a/riwayat/assets/css/style.css
+++ b/riwayat/assets/css/style.css
@@ -924,7 +924,7 @@ hr {
   }
 
   .header .container {
-    gap: 30px;
+    /* gap: 3px; */
   }
 
   .navbar,
@@ -941,6 +941,7 @@ hr {
   .navbar-link {
     position: relative;
     font-size: unset;
+    font-size: 1.29rem;
   }
 
   .navbar-link:is(:hover, :focus-visible) {
@@ -963,8 +964,8 @@ hr {
 
   .header .btn {
     display: flex;
-    padding: 12px 24px;
-    font-size: var(--fs-5);
+    padding: 10px 20px;
+    font-size: 1.2rem;
   }
 }
 
@@ -1011,6 +1012,10 @@ hr {
     padding-block: 25px;
   }
 
+  .header .container {
+    gap: 9px;
+  }
+
   .logo img {
     width: 128px;
   }
@@ -1018,6 +1023,14 @@ hr {
   .header .btn {
     font-size: unset;
     padding-block: 15px;
+  }
+
+  .navbar-link {
+    font-size: 1.55rem;
+  }
+
+  .header .btn {
+    font-size: 1.55rem;
   }
 
   /**
